Solve the Width overflow issue for mobile devices

--- a/frontend/src/component/navbar/Navbar.css
+++ b/frontend/src/component/navbar/Navbar.css
@@ -87,6 +87,7 @@
 .Navbar__handburgermenu-nav ul li a {
     color: white;
     text-decoration: none;
+    text-transform: uppercase;
 }
 
 @media (max-width: 768px) {
