--- a/frontend/src/element/card/Card.css
+++ b/frontend/src/element/card/Card.css
@@ -24,3 +24,9 @@
     align-items: center;
     gap: 10px;
 }
+
+@media (max-width: 400px) {
+    .Card {
+        width: 320px;
+    }
+}
