--- a/frontend/src/element/card/ReviewCard.css
+++ b/frontend/src/element/card/ReviewCard.css
@@ -38,5 +38,6 @@
 @media (max-width: 400px) {
     .ReviewCard {
         width: 280px;
+        padding: 20px;
     }
 }
